Modificación en el header, bg y color

--- a/index.html
+++ b/index.html
@@ -45,19 +45,18 @@
 
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
-            <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Desarrollador <br> 
-                    FULL STACK en formación.
+            <div class="ms-auto col-12 col-md-8">
+                <h1 class="display-1 fw-bold my-5 text-black">
+                    Desarrollador FULL STACK en formación.
                 </h1>
-                <p class="my-5">
+                <p class="my-5 text-black-50 fw-bold ">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
                     dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
                     mollitia inventore provident labore voluptatum nemo.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-secondary text-black me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-secondary text-black">Contacto</button>
                 </div>
             </div>
         </div>
